# pytorch_cpp_tutorial

./: LICENSE  README.md
day01_test_env_cpu/: CMakeLists.txt  README.md  main.cpp  makefile
day02_import_opencv/: CMakeLists.txt  README.md  main.cpp  makefile
day03_custom_dataset_mnist_cpu/: README.md  main.cpp  makefile
day04_custom_dataset_mnist_gpu/: CMakeLists.txt  README.md  main.cpp  makefile  mnist_download.py
